--- a/Worksheet#4/RWorksheet_Palabrica#4b.Rmd
+++ b/Worksheet#4/RWorksheet_Palabrica#4b.Rmd
@@ -37,6 +37,14 @@ for (i in 1:rows) {
   cat(rep('"*"', i), "\n")
 }
 ```
+2. Print the string “*” using for() function. The output should be the same as shown in Figure
+```{r}
+rows <- 5
+for (i in 1:rows) {
+cat(rep("''*''", i), "\n")
+}
+```
+
 3. Get an input from the user to print the Fibonacci sequence starting from the 1st input
 up to 500. Use repeat and break statements. Write the R Scripts and its output.
 
@@ -76,15 +84,171 @@ gender_counts <- table(data$Gender)
 
 # Create a barplot
 barplot(gender_counts, main = "Number of Males and Females",
-        col = c("yellow", "green"), names.arg = c("Female", "Male"),
+        col = c("#FEFAE0", "#DDA15E"), names.arg = c("Female", "Male"),
         ylab = "Count", xlab = "Gender", legend = TRUE)
 ```
 
 5. The monthly income of Dela Cruz family was spent on the following:
-Food Electricity Savings Miscellaneous
+Food Electricity Savings Miscellaneous.
 
 a. Create a piechart that will include labels in percentage.Add some colors and title of
 the chart. Write the R scripts and show its output.
+```{r}
+categories <- c("Food", "Electricity", "Savings", "Miscellaneous")
+values <- c(60, 10, 5, 25)
+pie_chart <- pie(values,
+
+labels = paste(categories, "(", values, ")", sep = ""),
+col = c("#A31621", "#CED3DC", "#4E8098", "#90C2E7"),
+main = "Monthly Income Distribution of Dela Cruz Family")
+
+percentages <- round(values / sum(values) * 100, 1)
+text(0, 5, paste(percentages, "%"), cex = 1.2, pos = 3)
+```
+6. Use the iris dataset. data(iris)
+a. Check for the structure of the dataset using the str() function. Describe what you have seen in the output.
+```{r}
+data(iris)
+str(iris)
+```
+The output of the str(iris) function shows that the iris dataset is a data frame with 150 rows and 5 columns. Four of the columns contain numeric data, which correspond to measurements of various parts of the iris flower, while the fifth column is a factor that indicates the flower's species.
+
+b. Create an R object that will contain the mean of the sepal.length, sepal.width,petal.length,and
+petal.width. What is the R script and its result?
+```{r}
+meanValues <- colMeans(iris[, 1:4])
+meanValues
+```
+c. Create a pie chart for the Species distribution. Add title, legends, and colors. Write the R script and
+its result.
+```{r}
+data(iris)
+speciesCounts <- table(iris$Species)
+pie(speciesCounts,
+main = "Species Distribution in Iris Dataset",
+col = c("#F1E4F3", "#F4BBD3", "#F686BD"), labels = paste(names(speciesCounts), "\n", speciesCounts))
+legend("topright", legend = names(speciesCounts), fill = c("#F1E4F3", "#F4BBD3", "#F686BD"))
+```
+d. Subset the species into setosa, versicolor, and virginica. Write the R scripts and show the last six (6) rows of each species.
+```{r}
+setosa_data <- iris[iris$Species == "setosa", ]
+versicolor_data <- iris[iris$Species == "versicolor", ]
+virginica_data <- iris[iris$Species == "virginica", ]
+last_six_setosa_data <- tail(setosa_data, 6)
+last_six_versicolor_data <- tail(versicolor_data, 6)
+last_six_virginica_data <- tail(virginica_data, 6)
+last_six_setosa_data
+last_six_versicolor_data
+last_six_virginica_data
+```
+e. Create a scatterplot of the sepal.length and sepal.width using the different species(setosa,versicolor,virginica).
+
+Add a title = “Iris Dataset”, subtitle = “Sepal width and length, labels for the x and y axis, the pch symbol and colors should be based on the species.
+```{r}
+plot(iris$Sepal.Length, iris$Sepal.Width,
+main = "Iris Dataset",
+sub = "Sepal Width and Length",
+xlab = "Sepal Length",
+ylab = "Sepal Width",
+pch = 19,
+col = iris$Species)
+legend("topright", legend = levels(iris$Species),
+col = 1:3, pch = 19)
+```
+f.Interpret the result.
+
+The pie chart displays the distribution of iris species in the dataset, with each slice representing the proportion of each species. This helps identify the most common species. The subsets show the last six entries for each species, providing detailed measurements of sepal and petal dimensions, which helps compare how these measurements vary across species. The scatterplot reveals the relationship between sepal length and width. If setosa forms a cluster at lower values, it indicates that this species generally has smaller flowers. On the other hand, if versicolor and virginica overlap, it suggests that their flower sizes are quite similar, making it difficult to distinguish between them based on these measurements.
+
+**BASIC CLEANING AND TRANSFORMATION OF OBJECTS**
+
+7. Import the alexa-file.xlsx. Check on the variations. Notice that there are ex- tra whitespaces among
+black variants (Black Dot, Black Plus, Black Show, Black Spot). Also on the white variants (White Dot, White Plus, White Show, White Spot).
+
+a. Rename the white and black variants by using gsub() function.
+```{r}
+library(readxl)
+alexa_data <- read_excel("/cloud/project/Worksheet#4/alexa_file.xlsx")
+unique(alexa_data$variation)
+```
+
+```{r}
+alexa_data$variation <- gsub("Black Dot", "BlackDot", alexa_data$variation)
+alexa_data$variation <- gsub("Black Plus", "BlackPlus", alexa_data$variation)
+alexa_data$variation <- gsub("Black Show", "BlackShow", alexa_data$variation)
+alexa_data$variation <- gsub("Black Spot", "BlackSpot", alexa_data$variation)
+alexa_data$variation <- gsub("White Dot", "WhiteDot", alexa_data$variation)
+alexa_data$variation <- gsub("White Plus", "WhitePlus", alexa_data$variation)
+alexa_data$variation <- gsub("White Show", "WhiteShow", alexa_data$variation)
+alexa_data$variation <- gsub("White Spot", "WhiteSpot", alexa_data$variation)
+unique(alexa_data$variation)
+```
+b. Get the total number of each variations and save it into another object. Save the object as variations. RData. Write the R scripts. What is its result? Hint: Use the dplyr package. Make sure to install it before loading the package.
+```{r}
+library(dplyr)
+variations <- alexa_data %>%
+count(variation)
+print(variations)
+```
+**SAMPLE OUTPUT**
+c. From the variations.RData, create a barplot(). Complete the details of the chart which include the
+title, color, labels of each bar.
+```{r}
+library(dplyr)
+variations$variation <- gsub(" +", " ", variations$variation)
+variations$variation <- trimws(variations$variation)
+bardata <- variations$n
+barnames <- variations$variation
+barplot(
+bardata,
+main = "Counts of Variations",
+col = rainbow(length(bardata)),
+names.arg = barnames,
+xlab = "Variations",
+ylab = "Counts",
+las = 2,
+border = "#53131e"
+)
+text(
+x = seq_along(bardata),
+y = bardata + max(bardata) * 0.05,
+labels = bardata,
+pos = 3,
+cex = 1,
+col = "#53131e"
+)
+```
+d. Create a barplot() for the black and white variations. Plot it in 1 frame, side by side. Complete the
+details of the chart.
+```{r}
+library(ggplot2)
+library(dplyr)
+
+variations$variation <- gsub(" +", " ", variations$variation)
+variations$variation <- trimws(variations$variation)
+bwvariations <- variations %>%
+filter(grepl("Black|White", variation))
+bardata <- as.matrix(bwvariations$n)
+barnames <- bwvariations$variation
+barplot(
+bardata,
+beside = TRUE,
+main = "Counts of Black and White Variations",
+col = c("#FA7921", "#FE9920", "#B9A44C", "#566E3D"),
+names.arg = barnames,
+xlab = "Variations",
+ylab = "Counts",
+las = 2,
+border = "black"
+)
+text(x = seq_along(bardata), y = bardata, labels = bardata, pos = 3, cex = 0.8, col = "black")
+```
+
+
+
+
+
+
+
 
 
 
